# slint_android_camera

./: Cargo.toml  README.md  android-run-release.cmd  android-run.cmd  build.rs
src/: app.rs  camera.rs  lib.rs  main.rs
src/camera/: camera2.rs  escam.rs  mod.rs  pcam.rs  rotate.wgsl  yuv2rgb.wgsl
