[package]
name = "slint_android_camera"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
slint = {version = "1.5.0", features = ["backend-android-activity-05"]}
anyhow = "1"
wgpu = "0.19.3"
image = "0.24.9"
bytemuck = "1.14.3"
pollster = "0.3.0"
log = "0.4.14"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"
jni = "0.21.1"
# ndk-sys = "0.5.0+25.2.9519653"
ndk-sys = "0.4.1+23.1.7779620"
# ndk = "0.8.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.9"