[package]
name = "slint_android_camera"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
slint = {version = "1.5.0", features = ["backend-android-activity-05"]}
anyhow = "1"
wgpu = "0.19.3"
image = "0.24.9"
bytemuck = "1.14.3"
pollster = "0.3.0"
log = "0.4.14"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"
jni = "0.21.1"
ndk-sys = "0.5.0+25.2.9519653"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.9"
kamera = { git = "https://github.com/planet0104/kamera" }

[package.metadata.android]
package = "com.planet.slint_camera"

apk_name = "Slint Camera"

[[package.metadata.android.uses_permission]]
name = "android.permission.CAMERA"

[package.metadata.android.signing.release]
path = "./test.jks"
keystore_password = "123456"

[package.metadata.android.signing.debug]
path = "./test.jks"
keystore_password = "123456"